--- a/dev/index.html
+++ b/dev/index.html
@@ -1,3 +1,6 @@
-<!DOCTYPE html><html ng-app="tazz"></html><head><meta charset="utf-8"><title></title><link href="index.css" rel="stylesheet" type="text/css"><script src="index.js"></script></head><body><p>hello world ff
+<!DOCTYPE html><html ng-app="tazz"></html><head><meta charset="utf-8"><title></title><script src="bower_components/platform/platform.js"></script></head><body><p>hello world ff
 
-</p><script src="//localhost:35729/livereload.js"></script></body>
+</p><script>document.addEventListener('WebComponentsReady', function() {
+  // Perform some behaviour
+});
+</script><script src="//localhost:35729/livereload.js"></script></body>
