--- a/dev/index.html
+++ b/dev/index.html
@@ -1,6 +1,22 @@
-<!DOCTYPE html><html ng-app="tazz"></html><head><meta charset="utf-8"><title></title><script src="bower_components/platform/platform.js"></script></head><body><p>hello world ff
-
-</p><script>document.addEventListener('WebComponentsReady', function() {
-  // Perform some behaviour
-});
-</script><script src="//localhost:35729/livereload.js"></script></body>
+<!DOCTYPE html>
+<html ng-app="tazz"></html>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <script src="bower_components/platform/platform.js"></script>
+  <link rel="import" href="elements/proto-element.html">
+</head>
+<body>
+  <p>
+    hello world ff
+    
+  </p>
+  <proto-element></proto-element>
+  <script>
+    document.addEventListener('WebComponentsReady', function() {
+      // Perform some behaviour
+    });
+    
+  </script>
+  <script src="//localhost:35729/livereload.js"></script>
+</body>
