Windows™ Recovery Point
- change to index.css triggers reload (as intended only of css file without reloading whole page)
- change to elements/proto-element.css does not trigger reload: ![](https://dl.dropboxusercontent.com/s/m4qvxbjsgy9f6aa/2014-06-24%20at%2005.50.png)

--- a/dev/index.html
+++ b/dev/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title></title>
+  <link href="index.css" rel="stylesheet" type="text/css">
   <script src="bower_components/platform/platform.js"></script>
   <link rel="import" href="elements/proto-element.html">
 </head>
 <body>
   <p>
-    hello world ff
+    hello world
     
   </p>
   <proto-element></proto-element>
