--- a/dev/elements/proto-element.html
+++ b/dev/elements/proto-element.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="proto-element.css"/>
     <script src="proto-element.js"></script>
     <core-ajax url="https://api.github.com/zen" auto="auto" response="{{resp}}"></core-ajax>
-    <div>
+    <div class="proto-content">
+      <p>hello world.</p>
       <blockquote>{{resp}}</blockquote>
     </div>
   </template>
