--- a/dev/index.html
+++ b/dev/index.html
@@ -3,15 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title></title>
+  <link href="bower_components/normalize-css/normalize.css" rel="stylesheet" type="text/css">
   <link href="index.css" rel="stylesheet" type="text/css">
   <script src="bower_components/platform/platform.js"></script>
   <link rel="import" href="elements/proto-element.html">
 </head>
 <body>
-  <p>
-    hello world
-    
-  </p>
   <proto-element></proto-element>
   <script>
     document.addEventListener('WebComponentsReady', function() {
